Created adding of Spell variants.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -2,6 +2,13 @@
 html(lang="de")
 	head
 		title Startseite
+		style.
+			body {
+				font-family: Georgia;
+			}
+			li {
+				padding: 0.3em;
+			}
 	body
 		ul
 			li
@@ -12,3 +19,7 @@ html(lang="de")
 				a(href="/zauberliste") Übersicht der Zaubersprüche
 			li
 				a(href="/zauber/neu") Neuer Zauberspruch
+			li
+				a Übersicht der Zauber-Varianten
+			li
+				a(href="/variante/neu") Neue Zauber-Variante
