Started updating of Spells and Variants.

--- a/views/system/nav.jade
+++ b/views/system/nav.jade
@@ -12,11 +12,11 @@ html(lang="de")
 	body
 		ul
 			li
-				a(href="/talente") Übersicht der Talente
+				a(href="/talent/liste") Übersicht der Talente
 			li
 				a(href="/talent/neu") Neues Talent
 			li
-				a(href="/zauberliste") Übersicht der Zaubersprüche
+				a(href="/zauber/liste") Übersicht der Zaubersprüche
 			li
 				a(href="/zauber/neu") Neuer Zauberspruch
 			li
