--- a/views/system/edit-talent.jade
+++ b/views/system/edit-talent.jade
@@ -35,6 +35,7 @@ html
 	body
 		h1 Talent [#{name}] bearbeiten:
 		form(action="/talent/"+_id, method="post", accept-charset="utf-8")
+			input(type="hidden", name="_method", value="put")
 			fieldset
 				div
 					label(for="t_name") Name
