--- a/views/held.jade
+++ b/views/held.jade
@@ -118,6 +118,10 @@ html(lang="de")
 							a(href="#sf") Sonderfertigkeiten
 						li
 							a(href="#taw") Talentwerte
+						li
+							a(href="/magie/"+_id) ► Magiebogen
+						li
+							a ► Geweihtenbogen
 				li
 					a.mitte(href="/helden") [ Charakterliste ]
 				li
@@ -142,6 +146,7 @@ html(lang="de")
 
 		section(style="clear: both;")
 			h1.mitte= Person.Name
+			h2.mitte –Heldenbogen–
 			
 			a#bes
 			table.data-section.links.eigenschaften
