--- a/views/system/edit-zauber.jade
+++ b/views/system/edit-zauber.jade
@@ -132,3 +132,7 @@ html(lang="de")
 				});
 				$('#typ').val(val);
 			});
+		form(action="/zauber/"+_Zauber._id, method="post", accept-charset="utf-8")
+			input(type="hidden", name="_method", value="delete")
+			fieldset
+				button(type="submit") löschen
