--- a/views/magie.jade
+++ b/views/magie.jade
@@ -53,7 +53,7 @@ html(lang="de")
 						li
 							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
-							a(href="/zauber/"+_id Zauber
+							a(href="/zauber/"+_id) Zauber
 						li
 							a Rituale
 
@@ -127,8 +127,8 @@ html(lang="de")
 						th AsP
 						th WD
 						th RW
+			//-
 				each __spell in Magie.Zauber
-				//-
 					tbody
 						tr
 							td=__spell._zauber.Name
