--- a/views/system/new-zauber.jade
+++ b/views/system/new-zauber.jade
@@ -1,5 +1,5 @@
 mixin Probe3()
-	- var Attr = ["MU", "KL", "IN", "CH", "FF", "GE", "KO", "KK"]
+	- var Attr = ["MU", "KL", "IN", "CH", "FF", "GE", "KO", "KK", "??"]
 	- for (var i=3; i--;)
 		select.probe(size="1", name="Probe")
 			each val in Attr
