--- a/views/held.jade
+++ b/views/held.jade
@@ -1,3 +1,6 @@
+mixin print(__data)
+	p!=JSON.stringify(__data)
+
 mixin SFTableSection(__liste, __name)
 	if __liste.length
 		tbody
@@ -138,7 +141,7 @@ html(lang="de")
 						li
 							a(href="/sf/"+_id) Sonderfertigkeiten
 						li
-							a Zauber
+							a(href="/zauber/"+_id) Zauber
 						li
 							a Rituale
 						li
@@ -279,7 +282,7 @@ html(lang="de")
 				+SFTableSection(SF.Manöver, 'Waffenlose Manöver')
 				+SFTableSection(SF.geweiht, 'Karmale Sonderfertigkeiten')
 				+SFTableSection(SF.magisch, 'Magische Sonderfertigkeiten')
-		a#taw				
+		a#taw
 		section.clearfix
 			.vor-nach.fl-links
 				+KampfTable(Talente.Nahkampf, 'Nahkampf')
@@ -301,4 +304,4 @@ html(lang="de")
 			.vor-nach.fl-rechts
 				+LanguageTable(Talente.Schriften, 'Schriften')
 		section.clearfix
-		
+			+print(Magie)
