--- a/public/show.css
+++ b/public/show.css
@@ -56,7 +56,7 @@ body {
 	padding: 0;
 	padding-bottom: 3em;
 	margin: 0;
-	font-family: sans-serif;
+	font-family: Georgia, sans-serif;
 }
 table {
 	margin-top: 2em;
