--- a/views/magie.jade
+++ b/views/magie.jade
@@ -1,3 +1,6 @@
+mixin print(__data)
+	p!=JSON.stringify(__data)
+
 mixin SFTableSection(__liste, __name)
 	if __liste.length
 		tbody
@@ -21,6 +24,17 @@ html(lang="de")
 		style.
 			.eigenschaften {
 				table-layout: fixed;
+			}
+			.meta td {
+				background-color: #eee;
+				color: gray;
+				font-style: italic;
+			}
+			.zauber > tbody > tr:first-child > td {
+				background-color: #ccc;
+			}
+			.zauber td:first-child {
+				text-align: left;
 			}
 	body
 		a#top
@@ -103,23 +117,16 @@ html(lang="de")
 				
 		a#spr
 		section
-			table.data-section.eigenschaften.mitte
+			table.data-section.eigenschaften.mitte.zauber
 				caption Zaubersprüche
 				colgroup
 					col
 					col(style="width: 9em;")
 					col(style="width: 4.5em;", span="2")
-					col(style="width: 9em;", span="4")
+					col(style="width: 10em;", span="4")
 				thead
 					tr
 						th Zauber
-						th(colspan="3") Spontane Mod.
-						th Merkmale
-						th Ziel
-						th Repräsentation
-						th Komplexität
-					tr
-						th
 						th Probe
 						th ZfW
 						th Mod.
@@ -127,25 +134,31 @@ html(lang="de")
 						th AsP
 						th WD
 						th RW
-			//-
+					tr
+						th
+						th(colspan="3") Spontane Mod.
+						th Merkmale
+						th Ziel
+						th Repräsentation
+						th Komplexität
 				each __spell in Magie.Zauber
 					tbody
 						tr
-							td=__spell._zauber.Name
-							td(colspan="3")= __spell._zauber.SpoMod.join(', ')
-							td= __spell._zauber.Merkmale.join(', ')
-							td= __spell._zauber.Ziel.join(', ')
-							td= __spell.Repräsentation
-							td= __spell._zauber.Komplexität
-						tr.meta
-							td 
+							td= __spell._zauber.Name
 							td= __spell._zauber.Probe.join(' · ')
-							td 
+							td= __spell.ZfW
 							td= __spell._zauber.modifikation.typ
 							td= __spell._zauber.cast.ZD
 							td= __spell._zauber.cast.AsP
 							td= __spell._zauber.cast.WD
 							td= __spell._zauber.cast.RW
+						tr.meta
+							td
+							td(colspan="3")= __spell._zauber.SpoMod.join(', ')
+							td= __spell._zauber.Merkmale.join(', ')
+							td= __spell._zauber.Ziel.join(', ')
+							td= __spell.Repräsentation
+							td= __spell._zauber.Komplexität
 						if Array.isArray(__spell._zauber.Varianten)
 							each __variant in __spell._zauber.Varianten.filter(function(item) { return (item.Repräsentationen.indexOf(__spell.Repräsentation) > -1) })
 								tr
